[gd_scene load_steps=6 format=3 uid="uid://iagxf030aqgv"]

[ext_resource type="Script" path="res://Scripts/EndScene.gd" id="1_622hx"]
[ext_resource type="Texture2D" uid="uid://dyrcfofrwq6x3" path="res://MainMenuBackground.tres" id="1_u5a8a"]
[ext_resource type="Theme" uid="uid://chhuld0flc2tc" path="res://MainTheme.tres" id="2_8vi3q"]
[ext_resource type="FontFile" uid="uid://dnwpbneyuyd1n" path="res://new_font_file.tres" id="3_ui0nn"]

[sub_resource type="LabelSettings" id="LabelSettings_4nsx8"]
font = ExtResource("3_ui0nn")
font_size = 75
outline_size = 10
outline_color = Color(0, 0, 0, 1)
shadow_size = 4
shadow_color = Color(0.176471, 0.176471, 0.176471, 1)
shadow_offset = Vector2(5, 5)

[node name="MainMenu" type="Node"]

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_u5a8a")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("1_622hx")
menuScene = "res://Scenes/MenuUI.tscn"
restartScene = "res://Scenes/Main.tscn"

[node name="MainMenu" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_8vi3q")

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/MainMenu/CenterContainer"]
custom_minimum_size = Vector2(512, 300)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MainMenu/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/CenterContainer/PanelContainer/MarginContainer"]
clip_contents = true
layout_mode = 2
theme_override_constants/separation = 16

[node name="GameTitle" type="Label" parent="CanvasLayer/MainMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Plumber Adventure"
label_settings = SubResource("LabelSettings_4nsx8")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="ButtonMenu" type="Button" parent="CanvasLayer/MainMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "Main Menu"

[node name="ButtonRestart" type="Button" parent="CanvasLayer/MainMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "Restart"

[node name="ButtonQuit" type="Button" parent="CanvasLayer/MainMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "Quit"

[connection signal="pressed" from="CanvasLayer/MainMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonMenu" to="CanvasLayer" method="_on_button_controls_pressed" flags=18]
[connection signal="pressed" from="CanvasLayer/MainMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonMenu" to="CanvasLayer" method="_on_button_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonRestart" to="CanvasLayer" method="_on_button_start_pressed" flags=18]
[connection signal="pressed" from="CanvasLayer/MainMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonRestart" to="CanvasLayer" method="_on_button_restart_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonQuit" to="CanvasLayer" method="_on_button_quit_pressed" flags=18]
